--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Grids Part 2</title>
+    <title>SuperShopper Home</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 
-    <header>
 
-    </header>
-    <nav></nav>
-    <nav></nav>
-    <nav></nav>
-    <nav></nav>
- 
-    <section></section>
-    <section></section>
-    <section></section>
-    <footer></footer>
-</body>
+    <body>
+
+        <nav><a href="productpage.html">Product Page</a></nav> <!-- Logo-->
+        <nav></nav> <!-- Cart-->
+        <nav></nav> <!-- Account-->
+        <nav></nav> <!-- Search-->
+    
+        <section></section> <!-- Revolving Product Display-->
+        <section></section> <!-- Product Categories-->
+        <section></section> <!-- Recommendations-->
+
+    </body>
+
 </html>
