First Product Page & Recommendations Pages
Figured out how to set different grids for each page. In my prototype I split cart suggestions and user review pages for the mobile versions, meaning its completely different depending if the website was used on mobile or desktop.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 
 
-    <body>
+<body id="home">
 
-        <nav><a href="productpage.html">Product Page</a></nav> <!-- Logo-->
-        <nav></nav> <!-- Cart-->
-        <nav></nav> <!-- Account-->
-        <nav></nav> <!-- Search-->
+    <nav><a href="productpage.html">Product Page</a></nav> <!-- Logo-->
+    <nav></nav> <!-- Cart-->
+    <nav></nav> <!-- Account-->
+    <nav></nav> <!-- Search-->
     
-        <section></section> <!-- Revolving Product Display-->
-        <section></section> <!-- Product Categories-->
-        <section></section> <!-- Recommendations-->
+    <section></section> <!-- Revolving Product Display-->
+    <section></section> <!-- Product Categories-->
+    <section> <!-- Recommendations-->
+        <a href="recommended_desktop.html">Recommended Desktop</a>  
+        <a href="recommended_mobile.html">Recommended Mobile</a>    
+    </section> 
 
     </body>
 
