--- a/recommended_mobile.html
+++ b/recommended_mobile.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SuperShopper Product Page</title>
+    <title>SuperShopper Recommendations</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="productpage">
+<body id="recomm_mobile">
 
     <nav><a href="index.html">Home</a></nav> <!-- Logo-->
     <nav></nav> <!-- Cart-->
     <nav></nav> <!-- Account-->
     <nav></nav> <!-- Search-->
  
-    <section></section> <!-- Product Image-->
-    <section></section> <!-- Product Description-->
-    <section></section> <!-- Other Customers Purchased-->
+    <section> <!-- Cart Suggestions-->
+        <a href="cartsuggestions_mobile.html">Cart Suggestions</a></nav>
+    </section> 
+    <section> <!-- User Reviews-->
+        <a href="userreviews_mobile.html">User Reviews</a></nav>
+    </section> 
+    
 
 </body>
 </html>
