--- a/userreviews_mobile.html
+++ b/userreviews_mobile.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SuperShopper Product Page</title>
+    <title>SuperShopper Recommendations</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="productpage">
+<body id="recomm_list_mobile">
 
     <nav><a href="index.html">Home</a></nav> <!-- Logo-->
     <nav></nav> <!-- Cart-->
     <nav></nav> <!-- Account-->
     <nav></nav> <!-- Search-->
  
-    <section></section> <!-- Product Image-->
-    <section></section> <!-- Product Description-->
-    <section></section> <!-- Other Customers Purchased-->
-
+    <section></section> <!-- 1 User Reviews Title-->
+    <section></section> <!-- 2 Review 1-->
+    <section></section> <!-- 3 Review 2-->
+    <section></section> <!-- 4 Review 3-->
+    <section></section> <!-- 5 Review 4-->
+    <section></section> <!-- 6 Review 5-->
+    <section></section> <!-- 7 Review 6-->
 </body>
 </html>
