Update to nested grids
Updated index to use nested grids rather than having the whole thing in the body grid. Still need to update the other pages I started to use this system.

--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 </head>
 
 
-<body id="home">
-
-    <nav><a href="productpage.html">Product Page</a></nav> <!-- Logo-->
-    <nav></nav> <!-- Cart-->
-    <nav></nav> <!-- Account-->
-    <nav></nav> <!-- Search-->
+<body>
+    <header>
+        <nav><a href="productpage.html">Product Page</a></nav> <!-- Logo-->
+        <nav></nav> <!-- Cart-->
+        <nav></nav> <!-- Account-->
+        <nav></nav> <!-- Search-->
+    </header>
     
-    <section></section> <!-- Revolving Product Display-->
-    <section></section> <!-- Product Categories-->
-    <section> <!-- Recommendations-->
-        <a href="recommended_desktop.html">Recommended Desktop</a>  
-        <a href="recommended_mobile.html">Recommended Mobile</a>    
-    </section> 
-
+    <main class="home">
+        <section class="display">  <!-- Revolving Product Display-->
+            <img src="img/produce.jpg" width="auto" height="auto">
+            <div>
+                <p>Testing</p>    
+            </div>
+        </section>
+        <section></section> <!-- Product Categories-->
+        <section> <!-- Recommendations-->
+            <a href="recommended_desktop.html">Recommended Desktop</a>  
+            <a href="recommended_mobile.html">Recommended Mobile</a>    
+        </section> 
+    </main>
     </body>
 
 </html>
