--- a/userreviews_mobile.html
+++ b/userreviews_mobile.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SuperShopper Recommendations</title>
+    <title>SuperShopper User Reviews</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="recomm_list_mobile">
 
-    <nav><a href="index.html">Home</a></nav> <!-- Logo-->
-    <nav></nav> <!-- Cart-->
-    <nav></nav> <!-- Account-->
-    <nav></nav> <!-- Search-->
- 
+    <header>
+        <nav><a href="index.html">Home</a></nav> <!-- Logo-->
+        <nav></nav> <!-- Cart-->
+        <nav></nav> <!-- Account-->
+        <nav></nav> <!-- Search-->
+    </header>
     <section></section> <!-- 1 User Reviews Title-->
     <section></section> <!-- 2 Review 1-->
     <section></section> <!-- 3 Review 2-->
