Updated Product Page
Had to use padding to realign the grids because they were being pushed right on desktop mode.

--- a/productpage.html
+++ b/productpage.html
@@ -7,16 +7,22 @@
     <title>SuperShopper Product Page</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="productpage">
-
-    <nav><a href="index.html">Home</a></nav> <!-- Logo-->
-    <nav></nav> <!-- Cart-->
-    <nav></nav> <!-- Account-->
-    <nav></nav> <!-- Search-->
- 
-    <section></section> <!-- Product Image-->
-    <section></section> <!-- Product Description-->
-    <section></section> <!-- Other Customers Purchased-->
+<body>
+    <header>
+        <nav><a href="index.html">Home</a></nav> <!-- Logo-->
+        <nav></nav> <!-- Cart-->
+        <nav></nav> <!-- Account-->
+        <nav></nav> <!-- Search-->
+    </header>
+    
+    <main class="product">
+        <section> <!-- Product Image-->
+            <img src="img/eggs.png" width="auto" height="auto">
+        </section> 
+        <section></section> <!-- Product Description-->
+        <section></section> <!-- Other Customers Purchased-->
+    </main>
+    
 
 </body>
 </html>
