Updated Recommended / Review Pages
Changed design of these pages to work on both mobile and desktop, simple buttons at the top to switch between cart suggestions and user reviews.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </section>
         <section></section> <!-- Product Categories-->
         <section> <!-- Recommendations-->
-            <a href="recommended_desktop.html">Recommended Desktop</a>  
-            <a href="recommended_mobile.html">Recommended Mobile</a>    
+            <a href="recommended.html">Recommendations</a>  
+               
         </section> 
     </main>
     </body>
