Updated Nav Bar
Made the nav bar look like the prototype version. Choose to remove the logo from the mobile version because it took up space and to be honest, is a lazy bad logo.

--- a/userreviews.html
+++ b/userreviews.html
@@ -10,10 +10,17 @@
 <body>
 
     <header>
-        <nav><a href="index.html">Home</a></nav> <!-- Logo-->
-        <nav></nav> <!-- Cart-->
-        <nav></nav> <!-- Account-->
-        <nav></nav> <!-- Search-->
+        <nav></nav> <!-- Logo-->
+        <nav> <!-- Cart-->
+            <img src="img/icons/cart.svg" width="48px">
+        </nav> 
+        <nav> <!-- Account-->
+            <img src="img/icons/account.svg" width="48px">
+        </nav> 
+        <nav> <!-- Search-->
+            <p>Search</p>
+            <img src="img/icons/search.svg" width="32px">
+        </nav> 
     </header>
 
     <main class="recomm">
