--- a/index.html
+++ b/index.html
@@ -11,22 +11,41 @@
 
 <body>
     <header>
-        <nav><a href="productpage.html">Product Page</a></nav> <!-- Logo-->
-        <nav></nav> <!-- Cart-->
-        <nav></nav> <!-- Account-->
-        <nav></nav> <!-- Search-->
+        <nav> <!-- Logo-->
+            <img src="img/icons/logo.svg" width="64px">
+        </nav>
+        <nav> <!-- Logo Text-->
+            <h1>SuperShopper</h1>
+        </nav>  
+        <nav> <!-- Cart-->
+            <img src="img/icons/cart.svg" width="48px">
+        </nav> 
+        <nav> <!-- Account-->
+            <img src="img/icons/account.svg" width="48px">
+        </nav> 
+        <nav> <!-- Search-->
+            <p>Search</p>
+            <img src="img/icons/search.svg" width="32px">
+        </nav> 
     </header>
     
     <main class="home">
         <section class="display">  <!-- Revolving Product Display-->
-            <img src="img/produce.jpg" width="auto" height="auto">
-            <div>
-                <p>Testing</p>    
+            <a href="productpage.html"><img src="img/produce.jpg" width="auto" height="auto"></a>
+            <div>    
+                <img src="img/icons/filled.svg" width="32px">
+                <img src="img/icons/empty.svg" width="32px">
+                <img src="img/icons/empty.svg" width="32px">
+                <img src="img/icons/empty.svg" width="32px">
+                <img src="img/icons/empty.svg" width="32px">
+                <img src="img/icons/empty.svg" width="32px">
             </div>
         </section>
-        <section></section> <!-- Product Categories-->
+        <section> <!-- Product Categories-->
+            <h3>Product Categories</h3>
+        </section> 
         <section> <!-- Recommendations-->
-            <a href="recommended.html">Recommendations</a>  
+            <a href="recommended.html"><h3>Recommendations</h3></a>  
                
         </section> 
     </main>
