--- a/productpage.html
+++ b/productpage.html
@@ -9,10 +9,17 @@
 </head>
 <body>
     <header>
-        <nav><a href="index.html">Home</a></nav> <!-- Logo-->
-        <nav></nav> <!-- Cart-->
-        <nav></nav> <!-- Account-->
-        <nav></nav> <!-- Search-->
+        <nav></nav> <!-- Logo-->
+        <nav> <!-- Cart-->
+            <img src="img/icons/cart.svg" width="48px">
+        </nav> 
+        <nav> <!-- Account-->
+            <img src="img/icons/account.svg" width="48px">
+        </nav> 
+        <nav> <!-- Search-->
+            <p>Search</p>
+            <img src="img/icons/search.svg" width="32px">
+        </nav> 
     </header>
     
     <main class="product">
