Edit Cart Suggestion Page
Created the edit suggestion page with the list already styled. Was going to try have the header and add to cart buttons static, so the list could scroll without the whole page scrolling but couldn't get it to work nicely.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <nav> <!-- Logo-->
-            <img src="img/icons/logo.svg" width="64px">
+            <a href="index.html"><img src="img/icons/logo.svg" width="64px"></a>
         </nav>
         <nav> <!-- Logo Text-->
-            <h1>SuperShopper</h1>
+            <a href="index.html"><h1>SuperShopper</h1></a>
         </nav>  
         <nav> <!-- Cart-->
-            <img src="img/icons/cart.svg" width="48px">
+            <a href="cartstart.html"><img src="img/icons/cart.svg" width="48px"></a>
         </nav> 
         <nav> <!-- Account-->
             <img src="img/icons/account.svg" width="48px">
@@ -46,6 +46,7 @@
         </section> 
         <section> <!-- Recommendations-->
             <a href="recommended.html"><h3>Recommendations</h3></a>  
+            <a href="editsuggestion.html"><h3>Edit - Delete</h3></a> 
                
         </section> 
     </main>
