--- a/userreviews.html
+++ b/userreviews.html
@@ -10,7 +10,12 @@
 <body>
 
     <header>
-        <nav></nav> <!-- Logo-->
+        <nav> <!-- Logo-->
+            <a href="index.html"><img src="img/icons/logo.svg" width="64px"></a>
+        </nav>
+        <nav> <!-- Logo Text-->
+            <a href="index.html"><h1>SuperShopper</h1></a>
+        </nav>  
         <nav> <!-- Cart-->
             <img src="img/icons/cart.svg" width="48px">
         </nav> 
