--- a/editsuggestion.html
+++ b/editsuggestion.html
@@ -17,7 +17,7 @@
             <a href="index.html"><h1>SuperShopper</h1></a>
         </nav>  
         <nav> <!-- Cart-->
-            <img src="img/icons/cart.svg" width="48px">
+            <a href="cartstart.html"><img src="img/icons/cart.svg" width="48px"></a>
         </nav> 
         <nav> <!-- Account-->
             <img src="img/icons/account.svg" width="48px">
