Index and Product Page
Finally got back around to updating the first couple of pages I created with the correct style and layout. I think all is left to do mostly is add in the content.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
     <main class="home">
         <section class="display">  <!-- Revolving Product Display-->
             <a href="productpage.html"><img src="img/produce.jpg" width="auto" height="auto"></a>
+            
+            <div>
+                <img src="img/icons/left.svg">
+            </div>
+
+            <div>
+                <img src="img/icons/right.svg">
+            </div>
+
             <div>    
                 <img src="img/icons/filled.svg" width="32px">
                 <img src="img/icons/empty.svg" width="32px">
@@ -41,12 +50,11 @@
                 <img src="img/icons/empty.svg" width="32px">
             </div>
         </section>
-        <section> <!-- Product Categories-->
+        <section class="button"> <!-- Product Categories-->
             <h3>Product Categories</h3>
         </section> 
-        <section> <!-- Recommendations-->
+       <section class="button"> <!-- Recommendations-->
             <a href="recommended.html"><h3>Recommendations</h3></a>  
-            <a href="editsuggestion.html"><h3>Edit - Delete</h3></a> 
                
         </section> 
     </main>
