--- a/cartend.html
+++ b/cartend.html
@@ -177,8 +177,9 @@
                 
                 <p>6 Items - $35.25</p>
                 <p>Pick up Fee - $5.00</p>
-                <p>Total: $40.25</p>
+                
                 <p>Continuing as Guest</p>
+                <h3>Total: $40.25</h3>
             </section>
 
             <section class="button"> <!-- 3 Continue Guest-->
