--- a/ordercomplete.html
+++ b/ordercomplete.html
@@ -127,7 +127,8 @@
             </section>
 
             <section class="content">  <!-- 2 Order Summary Desc-->
-                <p>Your order will be ready for pickup from SuperShopper Central on 14/10/22 at 3pm.</p>
+                <p>Your order will be ready for pickup from:</p>
+                <h3>SuperShopper Central on 14/10/22 at 3pm.</h3>
                 <p>Creating an account will allow you to save time next shop by saving your previous orders.</p>
             </section>
 
