--- a/payment.html
+++ b/payment.html
@@ -64,7 +64,7 @@
                 
                 <p>6 Items - $35.25</p>
                 <p>Pick up Fee - $5.00</p>
-                <p>Total: $40.25</p>
+                <h3>Total: $40.25</h3>
             </section>
 
             <section class="button"> <!-- 3 Complete Order-->
