--- a/userreviews.html
+++ b/userreviews.html
@@ -38,7 +38,7 @@
             <a href="userreviews.html"><h3>User Reviews</h3></a>
         </section> 
         <section class="content"> <!-- 3 List pt 1-->
-            <div class="list"> <!-- Item Start-->
+            <div class="listreviews"> <!-- Item Start-->
                 <div>
                     <img src="img/products/chicken.webp">
                 </div>
@@ -48,8 +48,8 @@
                     </section>
                 </div>
                 <div>
-                    <p>5/5 Stars</p>
-                    <p>In my head these two things were all I ever wanted in a chicken, which made me realize that I'd been wrong all along. For decades now I've made all sorts of chicken at home from chicken joints, to food trucks and restaurants. I can think of many things I would love here, but this one is different. Now I've changed my way of cooking, making chicken recipes and so many recipes that I have all of the recipes made that are so relevant to this recipe.</p>
+                    <h3>5/5 Stars</h3>
+                    <p>In my head these two things were all I ever wanted in a chicken, which made me realize that I'd been wrong all along. For decades now I've made all sorts of chicken at home from chicken joints, to food trucks and restaurants. I can think of many things I would love here, but this one is different.</p>
                 </div>
                 <div>
                     <section class="button">
@@ -62,7 +62,7 @@
                     </section>
                 </div>
             </div> <!-- Item End-->
-            <div class="list"> <!-- Item Start-->
+            <div class="listreviews"> <!-- Item Start-->
                 <div>
                     <img src="img/products/slice.webp">
                 </div>
@@ -72,7 +72,7 @@
                     </section>
                 </div>
                 <div>
-                    <p>5/5 Stars</p>
+                    <h3>5/5 Stars</h3>
                     <p>Love this cake. I love this cake because it is a keeper (and that's how I use to give it a thumbs up) as well as because you can eat it everyday. Love it. </p>
                 </div>
                 <div>
@@ -86,7 +86,7 @@
                     </section>
                 </div>
             </div> <!-- Item End-->
-            <div class="list"> <!-- Item Start-->
+            <div class="listreviews"> <!-- Item Start-->
                 <div>
                     <img src="img/products/pancake.webp">
                 </div>
@@ -96,7 +96,7 @@
                     </section>
                 </div>
                 <div>
-                    <p>5/5 Stars</p>
+                    <h3>5/5 Stars</h3>
                     <p>I would recommend it to anyone who likes this variety. I would take my first four or five of these pancakes and put them down for you to try…if you have the brain. </p>
                 </div>
                 <div>
@@ -113,7 +113,7 @@
             
         </section>
         <section class="content"> <!-- 4 List pt 2-->
-            <div class="list"> <!-- Item Start-->
+            <div class="listreviews"> <!-- Item Start-->
                 <div>
                     <img src="img/products/vegan.webp">
                 </div>
@@ -123,7 +123,7 @@
                     </section>
                 </div>
                 <div>
-                    <p>4/5 Stars</p>
+                    <h3>4/5 Stars</h3>
                     <p>The whole point in any of this is that it would be okay if you never ate real meat. The only question here is if you love it or if you have some other vegetarian taste buds; just love the taste that comes in your meat or meat substitutes. Enjoy </p>
 
                 </div>
@@ -138,7 +138,7 @@
                     </section>
                 </div>
             </div> <!-- Item End-->
-            <div class="list"> <!-- Item Start-->
+            <div class="listreviews"> <!-- Item Start-->
                 <div>
                     <img src="img/products/v.webp">
                 </div>
@@ -148,7 +148,7 @@
                     </section>
                 </div>
                 <div>
-                    <p>4/5 Stars </p>
+                    <h3>4/5 Stars </h3>
                     <p>I tried an energy drink on my birthday last year and found it was full of flavor and not overpowering. I've been drinking it the past few days now and only started using it because I am a little tired of eating things I can't drink. And I am only using it on my birthday.</p>
                 </div>
                 <div>
@@ -162,7 +162,7 @@
                     </section>
                 </div>
             </div> <!-- Item End-->
-            <div class="list"> <!-- Item Start-->
+            <div class="listreviews"> <!-- Item Start-->
                 <div>
                     <img src="img/products/apples.webp">
                 </div>
@@ -172,7 +172,7 @@
                     </section>
                 </div>
                 <div>
-                    <p>3/5 Stars</p>
+                    <h3>3/5 Stars</h3>
                     <p>So fresh, we can see we have plenty of that. But, not a ripeness because we are fresh. We see that we have, what we had was ripe. So, not the type of apple you see now.</p>
                 </div>
                 <div>
