--- a/cartstart.html
+++ b/cartstart.html
@@ -176,7 +176,7 @@
             <section class="content">  <!-- 2 Price Summary Desc-->
                 
                 <p>6 Items - $35.25</p>
-                <p>Total: $35.25</p>
+                <h3>Total: $35.25</h3>
             </section>
 
             <section class="button"> <!-- 3 Continue Guest-->
