Actual Final Commit
Removed placeholder images I was using and made the link at the end of the payment actually work.

--- a/ordercomplete.html
+++ b/ordercomplete.html
@@ -139,7 +139,7 @@
 
             <section class="button"> <!-- 4 Home-->
                 
-                <h3>Back Home</h3>
+                <a href="index.html"><h3>Back Home</h3></a>
             </section>
         </section>
         
